force-app/main/default/objects/PackingSlipFieldMap__mdt/PackingSlipFieldMap__mdt.object-meta.xml
<CustomObject>
	<description>Field token mapping metadata used to bind renderer tokens to provider DTO paths.</description>
	<label>Packing Slip Field Map</label>
	<pluralLabel>Packing Slip Field Maps</pluralLabel>
</CustomObject>