force-app/main/default/objects/PackingSlipFieldMap__mdt/fields/Field_Key__c.field-meta.xml
<CustomField>
	<fullName>Field_Key__c</fullName>
	<label>Field Key</label>
	<length>80</length>
	<required>true</required>
	<type>Text</type>
</CustomField>