force-app/main/default/objects/PackingSlipFieldMap__mdt/fields/Field_Path__c.field-meta.xml
<CustomField>
	<fullName>Field_Path__c</fullName>
	<label>Field Path</label>
	<length>255</length>
	<required>true</required>
	<type>Text</type>
</CustomField>