force-app/main/default/objects/PackingSlipFieldMap__mdt/fields/Is_Visible__c.field-meta.xml
<CustomField>
	<fullName>Is_Visible__c</fullName>
	<defaultValue>true</defaultValue>
	<label>Is Visible</label>
	<type>Checkbox</type>
</CustomField>